--- a/request Promise/index.html
+++ b/request Promise/index.html
@@ -24,7 +24,7 @@
             });
         };
 
-
+        /*
         requestPromise('movie.com')
             .then((response) => {
                 console.log(response);
@@ -32,6 +32,28 @@
             .catch((error) => {
                 console.log(error);
             });
+        */
+
+        requestPromise('movie.com')
+            .then((result) => {
+                console.log('page1');
+                console.log(result);
+                return requestPromise('movie.com');
+            })
+            .then((result) => {
+                console.log('page2');
+                console.log(result);
+                return requestPromise('movie.com');
+            })
+            .then((result) => {
+                console.log('page3');
+                console.log(result);
+                return requestPromise('movie.com');
+            })
+            .catch((error) => {
+                console.log(error);
+            });
+
     </script>
 </body>
 </html>
